--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -75,14 +75,14 @@
                             </div>
                         </li>
                         <li>
-                            <a class="collapsible-header waves-effect arrow-r"><i class="fa fa-hand-pointer-o"></i> Instruction<i class="fa fa-angle-down rotate-icon"></i></a>
+                            <a class="collapsible-header waves-effect arrow-r"><i class="fa fa-file-text-o"></i>Bài viết<i class="fa fa-angle-down rotate-icon"></i></a>
                             <div class="collapsible-body">
                                 <ul>
                                     <li>
-                                        <a href="#" class="waves-effect">For bloggers</a>
+                                        <a href="#" class="waves-effect"> <i class="fa fa-list"></i>Danh sách</a>
                                     </li>
                                     <li>
-                                        <a href="#" class="waves-effect">For authors</a>
+                                        <a href="#" class="waves-effect"><i class="fa fa-pencil"></i>Viết bài</a>
                                     </li>
                                 </ul>
                             </div>
@@ -254,63 +254,7 @@
 </script>
 @* <div class="drag-target" style="left: 0px; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div>*@
    
-    <!-- Charts -->
-    <script>
-        // Minimalist chart
-        $(function () {
-            $('.min-chart#chart-sales').easyPieChart({
-                barColor: "#4caf50",
-                onStep: function (from, to, percent) {
-                    $(this.el).find('.percent').text(Math.round(percent));
-                }
-            });
-        });
-
-        // Main chart
-        var ctxL = document.getElementById("lineChart").getContext('2d');
-        var myLineChart = new Chart(ctxL, {
-            type: 'line',
-            data: {
-                labels: ["January", "February", "March", "April", "May", "June", "July"],
-                datasets: [{
-                    label: "My First dataset",
-                    fillColor: "#fff",
-                    backgroundColor: 'rgba(255, 255, 255, .3)',
-                    borderColor: 'rgba(255, 99, 132)',
-                    data: [0, 10, 5, 2, 20, 30, 45],
-                }]
-            },
-            options: {
-                legend: {
-                    labels: {
-                        fontColor: "#fff",
-                    }
-                },
-                scales: {
-                    xAxes: [{
-                        gridLines: {
-                            display: true,
-                            color: "rgba(255,255,255,.25)"
-                        },
-                        ticks: {
-                            fontColor: "#fff",
-                        },
-                    }],
-                    yAxes: [{
-                        display: true,
-                        gridLines: {
-                            display: true,
-                            color: "rgba(255,255,255,.25)"
-                        },
-                        ticks: {
-                            fontColor: "#fff",
-                        },
-                    }],
-                }
-            }
-        });
-    </script>
-
+   
     <!-- Alerts -->
     <script>
 
