--- a/BlogHealth/Views/Admin/Categories.cshtml
+++ b/BlogHealth/Views/Admin/Categories.cshtml
@@ -342,8 +342,8 @@
                     <div class="modal-body">
                         <div class="text-left">
                             <div class="row" id="formAddCategory">
-                                <div class="col-md-12 mb-1" data-toggle="tooltip" data-placement="bottom" title="Nêu thêm cha khỏi chọn cái này.">
-                                    <div class="md-form  mb-1" >
+                                <div class="col-md-12 mb-1" >
+                                    <div class="md-form  mb-1" data-toggle="tooltip" data-placement="bottom" title="Nêu thêm cha khỏi chọn cái này.">
                                         <input type="text" name="Parent" class="form-control" title="" data-toggle="tooltip" data-placement="bottom">
                                     </div>
                                 </div>
