--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -25,7 +25,7 @@
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     @RenderSection("css", false)
 </head>
-<body class="fixed-sn navy-blue-skin">
+<body class="fixed-sn white-skin">
 
     <!--Main Navigation-->
     <header>
@@ -82,7 +82,7 @@
                                         <a href="#" class="waves-effect"> <i class="fa fa-list"></i>Danh sách</a>
                                     </li>
                                     <li>
-                                        <a href="#" class="waves-effect"><i class="fa fa-pencil"></i>Viết bài</a>
+                                        <a href="@Url.Action("AddPost","Admin")" class="waves-effect"><i class="fa fa-pencil"></i>Viết bài</a>
                                     </li>
                                 </ul>
                             </div>
