--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -25,12 +25,12 @@
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     @RenderSection("css", false)
 </head>
-<body class="fixed-sn white-skin">
+<body class="fixed-sn">
 
     <!--Main Navigation-->
     <header>
         <!-- Sidebar navigation -->
-        <div id="slide-out" class="side-nav  fixed mdb-sidenav" style="transform: translateX(-100%);">
+        <div id="slide-out" class="side-nav  fixed mdb-sidenav  blue-gradient" style="transform: translateX(-100%);">
             <ul class="custom-scrollbar list-unstyled scrollbar scrollbar-danger">
                 <!-- Logo -->
                 <li>
@@ -139,7 +139,7 @@
         </div>
         <!--/. Sidebar navigation -->
         <!-- Navbar -->
-        <nav class="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav">
+        <nav class="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav blue-gradient">
             <!-- SideNav slide-out button -->
             <div class="float-left">
                 <a href="#" data-activates="slide-out" class="button-collapse"><i class="fa fa-bars"></i></a>
