--- a/BlogHealth/Views/Admin/AddPost.cshtml
+++ b/BlogHealth/Views/Admin/AddPost.cshtml
@@ -4,78 +4,116 @@
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
 @section css{
-    
-<link href="~/bootstrap-fileinput-4.4.6/css/fileinput.css" rel="stylesheet" />
 
-<link href="~/bootstrap-fileinput-4.4.6/themes/explorer/theme.css" rel="stylesheet" />
+    <link href="~/bootstrap-fileinput-4.4.6/css/fileinput.css" rel="stylesheet" />
+    <style>
+        .btn[class*=btn-outline-] {
+            padding-top: 0 !important;
+            padding-bottom: 0 !important;
+        }
+
+        .input-group-btn {
+            margin-left: .5rem !important;
+        }
+    </style>
+    @*<link href="~/bootstrap-fileinput-4.4.6/themes/explorer/theme.css" rel="stylesheet" />*@
 }
 @section js{
-@*<script src="~/bootstrap-fileinput-4.4.6/js/plugins/sortable.min.js"></script>
-<script src="~/bootstrap-fileinput-4.4.6/js/plugins/purify.min.js"></script>
-<script src="~/bootstrap-fileinput-4.4.6/js/plugins/piexif.min.js"></script>*@
-<script src="~/bootstrap-fileinput-4.4.6/js/fileinput.min.js"></script>
-<script src="~/bootstrap-fileinput-4.4.6/js/locales/vi.js"></script>
-<script src="~/bootstrap-fileinput-4.4.6/themes/explorer/theme.min.js"></script>
+    <script src="~/bootstrap-fileinput-4.4.6/js/plugins/sortable.min.js"></script>
+        <script src="~/bootstrap-fileinput-4.4.6/js/plugins/purify.min.js"></script>
+        <script src="~/bootstrap-fileinput-4.4.6/js/plugins/piexif.min.js"></script>
+    <script src="~/bootstrap-fileinput-4.4.6/js/fileinput.min.js"></script>
+    <script src="~/bootstrap-fileinput-4.4.6/js/locales/vi.js"></script>
+    @*<script src="~/bootstrap-fileinput-4.4.6/themes/explorer/theme.min.js"></script>*@
+    <script src="~/bootstrap-fileinput-4.4.6/themes/fa/theme.js"></script>
+
     <script>
-        var editor = CKEDITOR.replace('Content');
-        CKFinder.setupCKEditor(editor, '/ckfinder/');
-        function bodauTiengViet(str) {
-            str = str.toLowerCase();
-            str = str.replace(/à|á|ạ|ả|ã|â|ầ|ấ|ậ|ẩ|ẫ|ă|ằ|ắ|ặ|ẳ|ẵ/g, 'a');
-            str = str.replace(/è|é|ẹ|ẻ|ẽ|ê|ề|ế|ệ|ể|ễ/g, 'e');
-            str = str.replace(/ì|í|ị|ỉ|ĩ/g, 'i');
-            str = str.replace(/ò|ó|ọ|ỏ|õ|ô|ồ|ố|ộ|ổ|ỗ|ơ|ờ|ớ|ợ|ở|ỡ/g, 'o');
-            str = str.replace(/ù|ú|ụ|ủ|ũ|ư|ừ|ứ|ự|ử|ữ/g, 'u');
-            str = str.replace(/ỳ|ý|ỵ|ỷ|ỹ/g, 'y');
-            str = str.replace(/đ/g, 'd');
-            str = str.replace(/\W+/g, ' ');
-            str = str.replace(/\s/g, '-');
-            return str;
-        }
-        $('#frmAddPost input[name="IDCategory"]').kendoDropDownList({
-            dataTextField: "Name",
-            dataValueField: "ID",
-            autoClose: false,
-            dataSource: {
-                type: "json",
-                transport: {
-                    read: "/Admin/GetCategories?kind=3"
-                }
-            },
-            optionLabel: "Chọn danh mục",
-        });
-        $('#frmAddPost input[name="Title"]').keydown( function () {
-            $('#frmAddPost input[name="Slug"]').val(bodauTiengViet($(this).val()));
-        });
-        $("#imageUp").fileinput({
-            uploadUrl: "/Account/UpImage/",
-            theme: "explorer",
-            language: 'vi',
-            minFileSize: '1',
-            maxFileSize: '900',
-            resizeImage: true,
-            maxImageWidth: 300,
-            maxImageHeight: 300,
-            resizePreference: 'width',
-            validateInitialCount: true,
-            uploadAsync: false,
-            minFileCount: '3',
-            accept: 'image/*',
-            maxFileCount: '6',
-            previewFileIcon: '<i class="fa fa-file"></i>',
-            allowedPreviewTypes: ['image'], // allow only preview of image & text files
-            allowedFileExtensions: ['jpg', 'gif', 'png'],
-            previewFileIconSettings: {
-                'docx': '<i class="fa fa-file-word-o text-primary"></i>',
-                'xlsx': '<i class="fa fa-file-excel-o text-success"></i>',
-                'pptx': '<i class="fa fa-file-powerpoint-o text-danger"></i>',
-                'pdf': '<i class="fa fa-file-pdf-o text-danger"></i>',
-                'zip': '<i class="fa fa-file-archive-o text-muted"></i>',
-            },
-            previewSettings: {
-                image: { width: "300px", height: "150px" },
+
+        $(document).ready(function () {
+            var editor = CKEDITOR.replace('Content');
+            CKFinder.setupCKEditor(editor, '/ckfinder/');
+            function bodauTiengViet(str) {
+                str = str.toLowerCase();
+                str = str.replace(/à|á|ạ|ả|ã|â|ầ|ấ|ậ|ẩ|ẫ|ă|ằ|ắ|ặ|ẳ|ẵ/g, 'a');
+                str = str.replace(/è|é|ẹ|ẻ|ẽ|ê|ề|ế|ệ|ể|ễ/g, 'e');
+                str = str.replace(/ì|í|ị|ỉ|ĩ/g, 'i');
+                str = str.replace(/ò|ó|ọ|ỏ|õ|ô|ồ|ố|ộ|ổ|ỗ|ơ|ờ|ớ|ợ|ở|ỡ/g, 'o');
+                str = str.replace(/ù|ú|ụ|ủ|ũ|ư|ừ|ứ|ự|ử|ữ/g, 'u');
+                str = str.replace(/ỳ|ý|ỵ|ỷ|ỹ/g, 'y');
+                str = str.replace(/đ/g, 'd');
+                str = str.replace(/\W+/g, ' ');
+                str = str.replace(/\s/g, '-');
+                return str;
             }
+            $('#frmAddPost input[name="IDCategory"]').kendoDropDownList({
+                dataTextField: "Name",
+                dataValueField: "ID",
+                autoClose: false,
+                dataSource: {
+                    type: "json",
+                    transport: {
+                        read: "/Admin/GetCategories?kind=3"
+                    }
+                },
+                optionLabel: "Chọn danh mục",
+            });
+            $('#frmAddPost input[name="Title"]').keydown(function () {
+                $('#frmAddPost input[name="Slug"]').val(bodauTiengViet($(this).val()));
+            });
+            $('#imageUp').on('filebatchuploadcomplete', function (event, files, extra) {
+                console.log("upload");
+                
+            });
+            $('#imageUp').on('change', function (event) {
+                console.log('change');
+                
+
+            });
+            $("#imageUp").fileinput({
+                uploadUrl: "/Admin/UpImagePost/",
+                theme: "fa",
+                language: 'vi',
+                resizeImage: true,
+                resizePreference: 'width',
+                validateInitialCount: true,
+                uploadAsync: false,
+                accept: 'image/*',
+                maxFileCount: '6',
+                previewFileIcon: '<i class="fa fa-file"></i>',
+                allowedPreviewTypes: ['image'], // allow only preview of image & text files
+                allowedFileExtensions: ['jpg', 'gif', 'png'],
+                previewFileIconSettings: {
+                    'docx': '<i class="fa fa-file-word-o text-primary"></i>',
+                    'xlsx': '<i class="fa fa-file-excel-o text-success"></i>',
+                    'pptx': '<i class="fa fa-file-powerpoint-o text-danger"></i>',
+                    'pdf': '<i class="fa fa-file-pdf-o text-danger"></i>',
+                    'zip': '<i class="fa fa-file-archive-o text-muted"></i>',
+                },
+                previewSettings: {
+                    image: { width: "300px", height: "150px" },
+                }
+            });
+
+            var status = ""+ @(ViewBag.Status) +"";
+            if (status == "Success") {
+                $('#Step1').addClass('disabled');
+                $('#frmAddPost input').attr('disabled');
+                $('#Step2').removeClass('disabled');
+                $('#collapseOne').removeClass('show');
+                
+                $('#collapseTwo').addClass('show');
+                $('#frmContentPost input[name="Content"]').removeAttr('disabled');
+                $('#frmContentPost input[name="ID"]').val(""+ @(ViewBag.ID) +"");
+            }
+            //$("#frmAddPost input[name='files']").kendoUpload({
+            //    async: {
+            //        saveUrl: "save",
+            //        removeUrl: "remove",
+            //        autoUpload: true
+            //    }
+            //});
         });
+
     </script>
 }
 <!--Card-->
@@ -89,74 +127,138 @@
     <!--/Card image-->
     <!--Card content-->
     <div class="card-body text-left ">
-
-
-        <form id="frmAddPost" method="post" action="">
-            <!--First row-->
-            <div class="row">
-
-                <div class="col-md-12">
-                    <div class="md-form">
-                        <i class="fa fa-bookmark-o prefix glyphicon glyphicon-upload"></i>
-                        <input type="text" name="Title"  class="form-control input-char-counter" placeholder="Tiêu đề (tối đa 300 ký tự)" length="300">
+        <div class="row">
+            <div class="col"></div>
+            @if (ViewBag.Error != null)
+            {
+                <div class="col">
+                    <div class="card-body bg-danger white-text text-center rounded p-1">
+                        <h6>@ViewBag.Error</h6>
                     </div>
                 </div>
-                <div class="col-md-12">
-                    <div class="md-form">
-                        <i class="fa fa-link prefix"></i>
-                        <input type="text" name="Slug" class="form-control" placeholder="Slug" readonly>
-                    </div>
-                </div>
-              
-                <div class="col-md-6">
-                    <div class="md-form">
-                        <div class="md-form">
-                           
-                            <input type="text" name="IDCategory" class="form-control" placeholder="Danh mục">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="md-form">
-                        <div class="md-form">
-                            <i class="fa fa-bookmark-o prefix"></i>
-                            <input type="text" name="Tag" class="form-control" placeholder="Tags (Mỗi tag cách nhau bằng dấu , )">
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="md-form">
-                       
-                           
-                            <input id="imageUp" name="files" multiple="multiple" type="file" class="form-control">
-
-                       
-                    </div>
-                </div>
-            </div>
-            <!--/.First row-->
-            
-            <!--Second row-->
-            <div class="row">
-                <!--First column-->
-                <div class="col-md-12">
-
-                    <div class="md-form">
-                        
-                        <textarea type="text" id="Content" class="md-textarea"></textarea>
-
-                    </div>
-
-                </div>
-            </div>
+            }
            
-         
-        </form>
+            @if (ViewBag.Success != null)
+            {
+                <div class="col">
+                    <div class="card-body bg-success white-text text-center rounded p-1">
+                        <h6>@ViewBag.Success</h6>
+                    </div>
+                </div>
+            }
+           @if (ViewBag.Status != null&& ViewBag.Status=="Success")
+            {
+            <div class="col">
+                <div class="card-body bg-success white-text text-center rounded p-1">
+                    <h6>@ViewBag.Status</h6>
+                </div>
+            </div>
+           }
+            <div class="col"></div>
+        </div>
+        
+        <!--Accordion wrapper-->
+        <div class="accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+
+            <!-- Accordion card -->
+            <div class="card" id="Step1">
+
+                <!-- Card header -->
+                <div class="card-header" role="tab" id="headingOne">
+                    <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <h5 class="mb-0">
+                            Thông tin bài viết <i class="fa fa-angle-down rotate-icon"></i>
+                        </h5>
+                    </a>
+                </div>
+
+                <!-- Card body -->
+                <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="card-body">
+                        <form id="frmAddPost" method="post" action="@Url.Action("AddPost","Admin")" enctype="multipart/form-data">
+                            <div class="row">
+
+                                <div class="col-md-12">
+                                    <div class="md-form">
+                                        <i class="fa fa-bookmark-o prefix glyphicon glyphicon-upload"></i>
+                                        <input type="text" name="Title" class="form-control input-char-counter" placeholder="Tiêu đề (tối đa 300 ký tự)" length="300">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="md-form">
+                                        <i class="fa fa-link prefix"></i>
+                                        <input type="text" name="Slug" class="form-control" placeholder="Slug" readonly>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="md-form">
+                                        <div class="md-form">
+
+                                            <input type="text" name="IDCategory" class="form-control" placeholder="Danh mục">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="md-form">
+                                        <div class="md-form">
+                                            <i class="fa fa-bookmark-o prefix"></i>
+                                            <input type="text" name="Tag" class="form-control" placeholder="Tags (Mỗi tag cách nhau bằng dấu , )">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-2">
+                                    <input id="imageUp" name="files" multiple type="file" class="form-control"  data-preview-file-type="text">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success btn-md" >Tiếp tục</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Accordion card -->
+            <!-- Accordion card -->
+            
+            <div class="card disabled" id="Step2">
+
+                <!-- Card header -->
+                <div class="card-header" role="tab" id="headingTwo">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <h5 class="mb-0">
+                            Nội dung bài viết<i class="fa fa-angle-down rotate-icon"></i>
+                        </h5>
+                    </a>
+                </div>
+
+                <!-- Card body -->
+                <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="card-body">
+                        <form id="frmContentPost" method="post" action="@Url.Action("UpdateContentPost","Admin")">
+                            <input type="text" name="ID" value="@ViewBag.ID" class="form-control"/>
+                            <div class="row">
+                                <!--First column-->
+                                <div class="col-md-12">
+                                    <div class="md-form">
+                                        <textarea type="text" disabled id="Content" class="md-textarea"></textarea>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Accordion card -->
+
+        </div>
+        <!--/.Accordion wrapper-->
+
+
+
 
     </div>
     <!--/.Card content-->
 
 </div>
 <!--/.Card-->
-
